// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Radio /> should not render label 1`] = `
<DocumentFragment>
  .c0 {
  margin: 1rem .5rem;
}

.c0 > span {
  font-size: 1rem;
  margin-left: 0.46874rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c1 > div {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c1 > span {
  color: #323a46;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  -webkit-tap-highlight-color: transparent;
}

.c4 {
  height: 100%;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  top: 0;
  width: 100%;
}

.c2 {
  height: 16px;
  width: 16px;
}

.c2 .src-radio-inner-circle {
  height: 4px;
  width: 4px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px #dbdbdb;
  border-radius: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  -webkit-transition: 200ms 0s ease-in-out;
  transition: 200ms 0s ease-in-out;
  -webkit-transition-property: height,width;
  transition-property: height,width;
}

.c7 {
  background: #fff;
  border-radius: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  position: relative;
}

.c3 .src-radio-container {
  background: #dbdbdb;
}

.c3 .src-radio-outer-circle {
  background: #0665d0;
  height: 0;
  width: 0;
}

<label
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <input
        class="c4"
        type="radio"
      />
      <div
        class="c5 src-radio-container"
      >
        <div
          class="c6 src-radio-outer-circle"
        >
          <div
            class="c7 src-radio-inner-circle"
          />
        </div>
      </div>
    </div>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  margin: 1rem .5rem;
}

.c0 > span {
  font-size: 1rem;
  margin-left: 0.46874rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c1 > div {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c1 > span {
  color: #323a46;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  -webkit-tap-highlight-color: transparent;
}

.c4 {
  height: 100%;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  top: 0;
  width: 100%;
}

.c2 {
  height: 16px;
  width: 16px;
}

.c2 .src-radio-inner-circle {
  height: 4px;
  width: 4px;
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: solid 2px #dbdbdb;
  border-radius: 100%;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
  -webkit-transition: 200ms 0s ease-in-out;
  transition: 200ms 0s ease-in-out;
  -webkit-transition-property: height,width;
  transition-property: height,width;
}

.c7 {
  background: #fff;
  border-radius: 100%;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c3 {
  position: relative;
}

.c3 .src-radio-container {
  background: #dbdbdb;
}

.c3 .src-radio-outer-circle {
  background: #0665d0;
  height: calc(100% + 4px);
  width: calc(100% + 4px);
}

<label
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <input
        checked=""
        class="c4"
        type="radio"
      />
      <div
        class="c5 src-radio-container"
      >
        <div
          class="c6 src-radio-outer-circle"
        >
          <div
            class="c7 src-radio-inner-circle"
          />
        </div>
      </div>
    </div>
    <span>
      Label
    </span>
  </label>
</DocumentFragment>
`;

exports[`<Radio /> should render custom component 1`] = `
<DocumentFragment>
  .c0 {
  margin: 1rem .5rem;
}

.c0 > span {
  font-size: 1rem;
  margin-left: 0.46874rem;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
}

.c1 > div {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c1 > span {
  color: #323a46;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  font-family: inherit;
  word-break: break-word;
  word-wrap: break-word;
  -webkit-tap-highlight-color: transparent;
}

.c2 {
  height: 100%;
  left: 0;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  top: 0;
  width: 100%;
}

<label
    class="c0 c1"
  >
    <div>
      <input
        class="c2"
        type="radio"
      />
      <svg />
    </div>
    <span>
      Label
    </span>
  </label>
</DocumentFragment>
`;
